Réorganisation des titres (h1, h2, h3 etc) + lang=fr et correction des contrastes

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #777138;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
@@ -147,7 +147,7 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 40px;
 }
 .quote__author {
 	font-family: Spectral;
